@@ -529,6 +529,17 @@
       </component>
     </version>
   </module>
+  <module name="epiphany">
+    <version release="gnome-2.1-fifth-toe">
+      <component name="epiphany" dir="epiphany">
+	<podir dir="po"/>
+	<potname name="epiphany-2.0.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="evolution">
     <version release="gnome-1.4-extras">
       <component name="evolution" dir="evolution">
