@@ -1,3 +1,7 @@
+2002-12-31  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added epiphany to 2.1-fifth-toe.
+
 2002-12-26  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added gnome-pkgview to 2.1-extras.
